Minor fixes to layout

--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -20,7 +20,7 @@
         <LinearLayout
             android:id="@+id/Results"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:baselineAligned="false"
             android:gravity="top"
@@ -38,7 +38,6 @@
                     android:id="@+id/Names"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:shadowColor="@android:color/black"
                     android:shadowDx="10"
                     android:shadowDy="10"
@@ -62,7 +61,6 @@
                     android:id="@+id/Scores"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:shadowColor="@android:color/black"
                     android:shadowDx="10"
                     android:shadowDy="10"
@@ -91,7 +89,7 @@
         android:cropToPadding="true"
         android:onClick="callForRoomUpdate"
         android:scaleType="fitEnd"
-        android:src="@drawable/button_joinroom"
+        android:src="@drawable/button_newround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -110,7 +108,7 @@
         android:cropToPadding="true"
         android:onClick="exitGame"
         android:scaleType="fitStart"
-        android:src="@drawable/button_joinroom"
+        android:src="@drawable/button_quit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -144,7 +142,7 @@
         android:shadowDy="10"
         android:shadowRadius="5"
         android:text="@string/wait_for_players"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_light"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
