--- a/app/src/main/res/layout/activity_join_room.xml
+++ b/app/src/main/res/layout/activity_join_room.xml
@@ -47,7 +47,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_weight="0.1"
+            android:layout_weight="0.2"
             android:ems="10"
             android:inputType="number"
             android:labelFor="@+id/roomNumberInput"
@@ -93,11 +93,15 @@
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_weight="0.1"
+            android:layout_weight="0.2"
             android:contentDescription="@string/RRNumber"
             android:ems="10"
             android:inputType="textPersonName"
             android:labelFor="@+id/userNameInput"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="10"
+            android:shadowDy="10"
+            android:shadowRadius="5"
             android:singleLine="true"
             android:textAlignment="center"
             android:textColor="@android:color/white"
