--- a/app/src/main/res/layout/activity_vote_on_claim.xml
+++ b/app/src/main/res/layout/activity_vote_on_claim.xml
@@ -116,7 +116,7 @@
             android:cropToPadding="true"
             android:onClick="compareAnswer"
             android:scaleType="fitCenter"
-            android:src="@drawable/button_joinroom"
+            android:src="@drawable/button_confirm"
             app:srcCompat="@drawable/button_confirm" />
 
     </LinearLayout>
