--- a/app/src/main/res/layout/activity_write_claim.xml
+++ b/app/src/main/res/layout/activity_write_claim.xml
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:layout_weight="0.1"
+            android:layout_weight="0.2"
             android:ems="10"
             android:inputType="textMultiLine|textPersonName"
             android:selectAllOnFocus="false"
@@ -52,6 +52,7 @@
             android:shadowDy="10"
             android:shadowRadius="5"
             android:singleLine="true"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textColorLink="@android:color/white"
             android:textSize="24sp"
